@@ -20,6 +20,7 @@ package org.killbill.billing.plugin.stripe;
 import java.math.BigDecimal;
 import java.sql.SQLException;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -96,7 +97,7 @@ public class StripePaymentPluginApi extends PluginPaymentPluginApi<StripeRespons
 
         public final String value;
 
-        CaptureMethod(String value) {
+        CaptureMethod(final String value) {
             this.value = value;
         }
     }
@@ -110,7 +111,7 @@ public class StripePaymentPluginApi extends PluginPaymentPluginApi<StripeRespons
     private final StripeConfigPropertiesConfigurationHandler stripeConfigPropertiesConfigurationHandler;
     private final StripeDao dao;
 
-    static final List<String> metadataFilter = ImmutableList.of("payment_method_types");
+    static final List<String> metadataFilter = List.of("payment_method_types");
 
     // needed for API calls to expand the response to contain the 'Sources'
     // https://stripe.com/docs/api/expanding_objects?lang=java
@@ -125,8 +126,8 @@ public class StripePaymentPluginApi extends PluginPaymentPluginApi<StripeRespons
         super(killbillAPI, configProperties, clock, dao);
         this.stripeConfigPropertiesConfigurationHandler = stripeConfigPropertiesConfigurationHandler;
         this.dao = dao;
-        expandSourcesParams = new HashMap<String, Object>();
-        expandSourcesParams.put("expand", ImmutableList.of("sources"));
+        expandSourcesParams = new HashMap<>();
+        expandSourcesParams.put("expand", List.of("sources"));
     }
 
 
@@ -146,12 +147,10 @@ public class StripePaymentPluginApi extends PluginPaymentPluginApi<StripeRespons
         final StripePaymentTransactionInfoPlugin transactionToExpire = expiredPaymentPolicy.isExpired(transactions);
         if (transactionToExpire != null) {
             logger.info("Canceling expired Stripe transaction {} (created {})", transactionToExpire.getStripeResponseRecord().getStripeId(), transactionToExpire.getStripeResponseRecord().getCreatedDate());
-            final Map additionalMetadata = ImmutableMap.builder()
-                                                       .put(PROPERTY_OVERRIDDEN_TRANSACTION_STATUS,
-                                                            PaymentPluginStatus.CANCELED.toString())
-                                                       .put("message",
-                                                            "Payment Expired - Cancelled by Janitor")
-                                                       .build();
+            final Map<String, String> additionalMetadata = Map.of(PROPERTY_OVERRIDDEN_TRANSACTION_STATUS,
+                                                                  PaymentPluginStatus.CANCELED.toString(),
+                                                                  "message",
+                                                                  "Payment Expired - Cancelled by Janitor");
             try {
                 dao.updateResponse(transactionToExpire.getStripeResponseRecord(), additionalMetadata);
             } catch (final SQLException e) {
@@ -188,7 +187,8 @@ public class StripePaymentPluginApi extends PluginPaymentPluginApi<StripeRespons
                                     requestOptions
                             );
                     }
-                    dao.updateResponse(transaction.getKbTransactionPaymentId(), intent, context.getTenantId());
+                    final Charge lastCharge = getLastCharge(intent, Collections.emptyMap(), requestOptions);
+                    dao.updateResponse(transaction.getKbTransactionPaymentId(), intent, lastCharge, context.getTenantId());
                     wasRefreshed = true;
                 } catch (final StripeException e) {
                     logger.warn("Unable to fetch latest payment state in Stripe, data might be stale", e);
@@ -204,7 +204,8 @@ public class StripePaymentPluginApi extends PluginPaymentPluginApi<StripeRespons
                         if (charge.getPaymentIntent() != null) {
                             final PaymentIntent intent = PaymentIntent.retrieve(charge.getPaymentIntent(), requestOptions);
                             logger.info("Fixing Stripe transaction {}", intent.getId());
-                            dao.updateResponse(transaction.getKbTransactionPaymentId(), intent, context.getTenantId());
+                            final Charge lastCharge = getLastCharge(intent, Collections.emptyMap(), requestOptions);
+                            dao.updateResponse(transaction.getKbTransactionPaymentId(), intent, lastCharge, context.getTenantId());
                             wasRefreshed = true;
                         }
                     } else if (result.getData().isEmpty()) {
@@ -480,23 +481,23 @@ public class StripePaymentPluginApi extends PluginPaymentPluginApi<StripeRespons
         final RequestOptions requestOptions = buildRequestOptions(context);
 
         // Track the objects (the various Stripe APIs can return the same objects under a different type)
-        final Set<String> stripeObjectsTreated = new HashSet<String>();
+        final Set<String> stripeObjectsTreated = new HashSet<>();
         try {
             // Start with PaymentMethod...
-            final Map<String, Object> paymentMethodParams = new HashMap<String, Object>();
+            final Map<String, Object> paymentMethodParams = new HashMap<>();
             paymentMethodParams.put("customer", stripeCustomerId);
             paymentMethodParams.put("type", "card");
-            final Iterable<PaymentMethod> stripePaymentMethodsCard = PaymentMethod.list(paymentMethodParams, requestOptions).autoPagingIterable();
+            final Iterable<PaymentMethod> stripePaymentMethodsCard = PaymentMethod.list(paymentMethodParams, requestOptions).autoPagingIterable(paymentMethodParams, requestOptions);
             syncPaymentMethods(kbAccountId, stripePaymentMethodsCard, existingPaymentMethodByStripeId, stripeObjectsTreated, context);
 
             paymentMethodParams.put("type", "sepa_debit");
-            final Iterable<PaymentMethod> stripePaymentMethodsSepaDebit = PaymentMethod.list(paymentMethodParams, requestOptions).autoPagingIterable();
+            final Iterable<PaymentMethod> stripePaymentMethodsSepaDebit = PaymentMethod.list(paymentMethodParams, requestOptions).autoPagingIterable(paymentMethodParams, requestOptions);
             syncPaymentMethods(kbAccountId, stripePaymentMethodsSepaDebit, existingPaymentMethodByStripeId, stripeObjectsTreated, context);
 
             // Then go through the sources
             final PaymentSourceCollection psc = Customer.retrieve(stripeCustomerId, expandSourcesParams, requestOptions).getSources();
             if (psc != null) {
-                final Iterable<? extends HasId> stripeSources = psc.autoPagingIterable();
+                final Iterable<? extends HasId> stripeSources = psc.autoPagingIterable(paymentMethodParams, requestOptions);
                 syncPaymentMethods(kbAccountId, stripeSources, existingPaymentMethodByStripeId, stripeObjectsTreated, context);
             }
         } catch (final StripeException e) {
@@ -888,6 +889,7 @@ public class StripePaymentPluginApi extends PluginPaymentPluginApi<StripeRespons
 
         PaymentIntent response = null;
         StripeException stripeException = null;
+        final RequestOptions requestOptions = buildRequestOptions(context);
         if (shouldSkipStripe(properties)) {
             throw new UnsupportedOperationException("TODO");
         } else {
@@ -895,7 +897,6 @@ public class StripePaymentPluginApi extends PluginPaymentPluginApi<StripeRespons
                 response = transactionExecutor.execute(account, nonNullPaymentMethodsRecord);
             } catch (final CardException e) {
                 try {
-                    final RequestOptions requestOptions = buildRequestOptions(context);
                     final Charge charge = Charge.retrieve(e.getCharge(), requestOptions);
                     final String paymentIntentId = charge.getPaymentIntent();
                     final PaymentIntent paymentIntent = PaymentIntent.retrieve(paymentIntentId, requestOptions);
@@ -911,7 +912,8 @@ public class StripePaymentPluginApi extends PluginPaymentPluginApi<StripeRespons
         }
 
         try {
-            final StripeResponsesRecord responsesRecord = dao.addResponse(kbAccountId, kbPaymentId, kbTransactionId, transactionType, amount, currency, response, stripeException, utcNow, context.getTenantId());
+            final Charge lastCharge = getLastCharge(response, Collections.emptyMap(), requestOptions);
+            final StripeResponsesRecord responsesRecord = dao.addResponse(kbAccountId, kbPaymentId, kbTransactionId, transactionType, amount, currency, response, lastCharge, stripeException, utcNow, context.getTenantId());
             return StripePaymentTransactionInfoPlugin.build(responsesRecord);
         } catch (final SQLException e) {
             throw new PaymentPluginApiException("Payment went through, but we encountered a database error. Payment details: " + response, e);
@@ -957,7 +959,8 @@ public class StripePaymentPluginApi extends PluginPaymentPluginApi<StripeRespons
         }
 
         try {
-            final StripeResponsesRecord responsesRecord = dao.addResponse(kbAccountId, kbPaymentId, kbTransactionId, transactionType, amount, currency, response, stripeException, utcNow, context.getTenantId());
+            final Charge lastCharge = getLastCharge(response, Collections.emptyMap(), buildRequestOptions(context));
+            final StripeResponsesRecord responsesRecord = dao.addResponse(kbAccountId, kbPaymentId, kbTransactionId, transactionType, amount, currency, response, lastCharge, stripeException, utcNow, context.getTenantId());
             return StripePaymentTransactionInfoPlugin.build(responsesRecord);
         } catch (final SQLException e) {
             throw new PaymentPluginApiException("Payment went through, but we encountered a database error. Payment details: " + response, e);
@@ -1010,4 +1013,19 @@ public class StripePaymentPluginApi extends PluginPaymentPluginApi<StripeRespons
         return "true".equals(PluginProperties.findPluginPropertyValue("skipGw", properties)) || "true".equals(PluginProperties.findPluginPropertyValue("skip_gw", properties));
     }
 
+    private Charge getLastCharge(@Nullable final PaymentIntent stripePaymentIntent,
+                                 final Map<String, Object> params,
+                                 final RequestOptions requestOptions) {
+        if (stripePaymentIntent == null || stripePaymentIntent.getCharges() == null) {
+            return null;
+        }
+
+        Charge lastCharge = null;
+        for (final Charge charge : stripePaymentIntent.getCharges().autoPagingIterable(params, requestOptions)) {
+            if (lastCharge == null || lastCharge.getCreated() < charge.getCreated()) {
+                lastCharge = charge;
+            }
+        }
+        return lastCharge;
+    }
 }
